--- a/assest/scss/home/_home.scss
+++ b/assest/scss/home/_home.scss
@@ -1,3 +1,5 @@
 @import "banner/banner";
 @import "banner/services";
 @import "banner/process";
+@import "banner/technology";
+@import "banner/testimonial";
