--- a/assest/scss/home/_home.scss
+++ b/assest/scss/home/_home.scss
@@ -1,5 +1,7 @@
-@import "banner/banner";
-@import "banner/services";
-@import "banner/process";
-@import "banner/technology";
-@import "banner/testimonial";
+@import "pages/banner";
+@import "pages/services";
+@import "pages/process";
+@import "pages/technology";
+@import "pages/testimonial";
+@import "pages/blog";
+@import "pages/quote";
