--- a/assest/scss/style.scss
+++ b/assest/scss/style.scss
@@ -32,5 +32,6 @@ ul, ol {
     position: relative;
 }
 
-@import "header/header";
+@import "common/header";
 @import "pages";
+@import "common/footer";
