--- a/assest/scss/variable/_mixins.scss
+++ b/assest/scss/variable/_mixins.scss
@@ -67,4 +67,24 @@
   }
 }
 
+@mixin black-button($background-color: #191919, $text-color: #ffffff, $padding: 10px 25px, $border: 2px solid #191919, $border-radius: 40px) {
+  background-color: $background-color;
+  color: $text-color;
+  padding: $padding;
+  border: $border;
+  border-radius: $border-radius;
+  cursor: pointer;
+  width: 200px;
+  height: 48px;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover {
+    background-color: transparent;
+    color: var(--text-color);
+  }
+}
+
 @import "./spacing";
